# autonomous-ai-swarm

./: .dockerignore  .env.example  .env.production.example  .gitignore  Makefile  README.md  deploy-key.pub  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260410_000001_initial.py  20260410_000002_auth_sessions.py  20260410_000003_artifacts_documents.py  20260410_000004_vector_indexes.py  20260410_000005_automation_executions.py  20260412_000006_project_shared_memory.py  20260412_000007_workspace_enterprise_metadata.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py  deps.py  middleware.py  request_context.py  security.py
apps/api/app/db/: init_db.py  session.py
apps/api/app/models/: __init__.py  entities.py
apps/api/scripts/: backfill_embeddings.py
apps/api/tests/: conftest.py  test_admin_enterprise.py  test_admin_search.py  test_agent_surface.py  test_artifact_previews.py  test_automations.py  test_browser_tool.py  test_chunker.py  test_document_parser.py  test_enterprise_hardening.py  test_governance.py  test_health.py  test_integrations.py  test_library_service.py  test_orchestrator.py  test_production_posture.py  test_retrieval.py  test_run_service_stream.py  test_security.py  test_shared_memory.py  test_task_rail_projects.py  test_task_search.py  test_task_templates.py  test_thread_controls.py  test_todo_workflow.py  test_tooling_depth.py  test_workbench.py  test_workbench_ide.py
(+155 files in other folders)
